--- a/Day1/index.html
+++ b/Day1/index.html
@@ -20,7 +20,7 @@
         </div>
         <input type="email" placeholder="Enter Email" class="Email">
         <div class="btn">
-            <button>Login</button>
+            <button onclick="showalert()">Login</button>
         </div>
     </div>
     </div>
